Add sort HTTP parameter and use PageMetadata to pass filters
