# things/api/things/http/endpoint.go
@@ -151,7 +151,7 @@ func listThingsEndpoint(svc things.Service) endpoint.Endpoint {
 			return nil, err
 		}
 
-		page, err := svc.ListThings(ctx, req.token, req.offset, req.limit, req.name, req.metadata)
+		page, err := svc.ListThings(ctx, req.token, req.pageMeta)
 		if err != nil {
 			return nil, err
 		}
@@ -355,7 +355,7 @@ func listChannelsEndpoint(svc things.Service) endpoint.Endpoint {
 			return nil, err
 		}
 
-		page, err := svc.ListChannels(ctx, req.token, req.offset, req.limit, req.name, req.metadata)
+		page, err := svc.ListChannels(ctx, req.token, req.pageMeta)
 		if err != nil {
 			return nil, err
 		}
