# things/openapi.yml
@@ -46,6 +46,7 @@ paths:
         - $ref: "#/components/parameters/Limit"
         - $ref: "#/components/parameters/Offset"
         - $ref: "#/components/parameters/Name"
+        - $ref: "#/components/parameters/Sort"
         - $ref: "#/components/parameters/Metadata"
       responses:
         200:
@@ -213,6 +214,8 @@ paths:
         - $ref: "#/components/parameters/Limit"
         - $ref: "#/components/parameters/Offset"
         - $ref: "#/components/parameters/Name"
+        - $ref: "#/components/parameters/Sort"
+        - $ref: "#/components/parameters/Metadata"
       responses:
         200:
           $ref: "#/components/responses/ChannelsPageRes"
@@ -682,6 +685,14 @@ components:
     Name:
       name: name
       description: Name filter. Filtering is performed as a case-insensitive partial match.
+      in: query
+      schema:
+        type: string
+        format: byte
+      required: false
+    Sort:
+      name: sort
+      description: Sort by name.
       in: query
       schema:
         type: string
